--- a/app/views/polls/index.html.erb
+++ b/app/views/polls/index.html.erb
@@ -1,37 +1,24 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Polls</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>Content</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <%= form_tag('/selected_polls') do %>
-      <% @polls.each do |poll| %>
-        <tr>
-          <td><%= check_box_tag 'poll_ids[]', poll.id %></td>
-          <td><%= poll.title %></td>
-          <td><%= poll.first_name %></td>
-          <td><%= poll.last_name %></td>
-          <td><%= poll.content %></td>
-          <td><%= link_to 'Show', poll %></td>
-          <td><%= link_to 'Edit', edit_poll_path(poll) %></td>
-          <td><%= link_to 'Destroy', poll, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        </tr>
-      <% end %>
-      <div><%= submit_tag 'Submit' %></div>
-    <% end %>
-  </tbody>
-</table>
-
+<a href="javascript:void(0);" class="batch_number_dropdown_items row_hover" id="" onclick="updateIndex()">Add Form</a>
+<%= form_tag('/selected_polls', method: :post) do %>
+  <table>
+    <thead>
+      <tr>
+        <th><input name="select_all" value="1" type="checkbox" onclick="selectAll(this.checked)"></th>
+        <th>Title</th>
+        <th>First name</th>
+        <th>Last name</th>
+        <th>Content</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+    <tbody id="table_body">
+    </tbody>
+  </table>
+  <%= submit_tag "Submit" %>
+<% end %>
 <br>
 
 <%= link_to 'New Poll', new_poll_path %>
